Added cookies recipe and update index links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
             </li>
 
             <li>
-                <a href="cupcakes.hmtl">Perfect Vanilla Cupcakes</a>
+                <a href="cupcakes.html">Perfect Vanilla Cupcakes</a>
+            </li>
+
+            <li>
+                <a href="cookies.html">The Best Chewy Chocolate Chip Cookies</a>
             </li>
         </ul>
         
